Fix default permsize not being set